fix bug + replacing src folder

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
   </head>
-  <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list">
-      
-    </ul>
-    <div class="country-info"></div>
-
+  <body class="container">
+      <input type="text" id="search-box" />
+      <ul class="country-list"></ul>
     <script src="index.js" type="module"></script>
   </body>
 </html>
